Add organization client workspace
